Bug #35927  	global g_eventLogger breaks dlopened libndbclient

Initialize g_eventLogger in ndb_init instead of statically. 
Initialize f_invalid_table and f_altered_table on first use.