storage/ndb/src/ndbapi/ObjectMap.hpp
@@ -21,7 +21,7 @@
 #include <NdbOut.hpp>
 
 #include <EventLogger.hpp>
-extern EventLogger g_eventLogger;
+extern EventLogger * g_eventLogger;
 
 //#define DEBUG_OBJECTMAP
 
@@ -85,8 +85,8 @@ NdbObjectIdMap::unmap(Uint32 id, void *object){
       m_map[i].m_next = m_firstFree;
       m_firstFree = i;
     } else {
-      g_eventLogger.error("NdbObjectIdMap::unmap(%u, 0x%x) obj=0x%x",
-                          id, (long) object, (long) obj);
+      g_eventLogger->error("NdbObjectIdMap::unmap(%u, 0x%x) obj=0x%x",
+                           id, (long) object, (long) obj);
       DBUG_PRINT("error",("NdbObjectIdMap::unmap(%u, 0x%lx) obj=0x%lx",
                           id, (long) object, (long) obj));
       return 0;
